July 13 Commit